<resources>
    <string name="app_name">Dibujando Un Mañana</string>
    <string name="contact">Contact</string>
    <string name="inTouch_question">Get in touch with us</string>
    <string name="join_ask">I want to join</string>
    <string name="fist_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_home_number">Home / cell phone</string>
    <string name="question_found_FDUM">How did you find out about FDUM?</string>
    <string name="hint_message">Message</string>
    <string name="interested">I am interested in:</string>
    <string name="hint_message_example">I don\'t know how I can help the organization.</string>
    <string name="register">Register</string>
    <string name="donation_details">Donation details</string>
    <string name="donation_amount">Donation amount</string>
    <string name="donation_dedication">Dedication</string>
    <string name="forgot_pass">I forgot my password</string>
    <string name="another">Other...</string>
    <string name="email_pass">Please, write your email below to send a code</string>
    <string name="send_code">Send Code</string>
    <string name="confrimation_code">A code was sent to your email, please write it below.</string>
    <string name="code">Code</string>
    <string name="confirmation_pass">Please enter the new password twice.</string>
    <string name="new_pass">Password</string>
    <string name="new_pass2">Repeat password</string>
    <string name="change_password">Change Password</string>
    <string name="register_project">Register Project</string>
    <string name="hint_project">Project\'s name</string>
    <string name="hint_duration">" Project duration"</string>
    <string name="hint_coworkers">Number of collaborators</string>
    <string name="hint_amount">Estimated amount</string>
    <string name="hint_description">Project description</string>
    <string name="enter_amount">Enter the amount you want to donate:</string>
    <string name="donation">Donate</string>
    <string name="hint_project_name">Project\'s name</string>
    <string name="tittle_dashboard">There are no impossible barriers</string>
    <string name="subtittle_dashboard">WHEN THERE IS THE WILL TO HELP AND SOMEONE WHO KNOWS TO DO IT.</string>
    <string name="body_dashboard">If you are willing to help, we can place your help where it is most needed so that it generates a better and greater impact.</string>
    <string name="question_dashboard">Why donate?</string>
    <string name="res_question_dashboard">With your donation you have the power to transform tomorrow. Remember that all your financial donations are tax deductible.</string>
    <string name="phrase_dashboard">Join and donate in our different channels!</string>
    <string name="dona_paypal">Donate with paypal</string>
    <string name="donate_now">Donate now</string>
    <string name="donate_monthly">Donate monthly</string>
    <string name="cash_deposit_transfer">Deposit and transfer</string>
    <string name="cash_deposit_body">You can make transfers through your Electronic Banking application or Mobile Application. Likewise, deposits can be made at the windows of any BBVA branch or at convenience stores.</string>
    <string name="name">Name</string>
    <string name="Bank">Bank</string>
    <string name="accountNumber">Account number</string>
    <string name="financial_model">Financial Model</string>
    <string name="financial_body">Each peso donated to Fundación Dibujando un Mañana is multiplied by $ 6.16 in social return on investment; according to a 2019 Philanthrophilia study.</string>
    <string name="financial_question">What does this mean?</string>
    <string name="financial_res">That we have the ability to accompany our allies (companies and individuals) to make the safest and most transparent investments; and CSOs to be efficient and sustainable; by carrying out the whole process step by step; giving added value beyond the financial investment that is made.</string>
    <string name="modelo">Fundación Dibujando un Mañana Model</string>
    <string name="modelo_body">Our Model is inspired by a systemic and international vision that allows us to dimension in the same panorama the different social actors that must be linked through alliances to achieve Sustainable Development and achieve our purpose. We are an organization aware of the context in which the social problems of girls, boys, adolescents and young people are gestated, as well as the willingness of companies, people and organizations to help, that is why we focus on the union of these wills, based on international standards such as Triangular Cooperation, Management for Development Results and Human Rights Approach, to strengthen them and enhance their reach and social investment.</string>
    <string name="home_causes">Our Causes</string>
    <string name="home_body">We are dedicated to promoting the social development of girls, boys and adolescents in vulnerable situations in Mexico and Central America with a social investment model.</string>
    <string name="home_story">Our history</string>
    <string name="story">In October 1997 the Fundación Diseño Ilustrajando un Mañana, A.C. was born. with the objective of investing in institutions that serve girls, boys and adolescents to promote institutional development and guarantee its sustainability.The more than 20 years of evolution have been marked by different events of transformation, strengthening, innovation and transparency thanks to its seven presidents, 40 members of the Board of Directors, different advisors in eight work Committees and the Operational Team.The road has been long and there is still much to do. That is why we are convinced that the route is to generate alliances to create the appropriate conditions that favor a dignified life for all the people of our country and the region.</string>
    <string name="home_question">What do we do?</string>
    <string name="financial_home">Social investment model</string>
    <string name="model_FDUM">Fundación Dibujando un Mañana Model</string>
    <string name="notif_org">Organization</string>
    <string name="level">Level</string>
    <string name="myDonations">My Donations</string>
    <string name="LogOut">Log Out</string>
    <string name="weare">We are Fundación Dibujando un Mañana!</string>
    <string name="weare_body">We are an organization aware of the context in which the social problems of girls, boys, adolescents and young people are born, as well as the willingness of companies, people and organizations to help. We focus on the union of these wills.</string>
    <string name="youCan">With the app you can:</string>
    <string name="youCan1">Learn more about the organization</string>
    <string name="youCan2">Donate through PayPal</string>
    <string name="youCan3">Register a project</string>
    <string name="youCan4">Check your donations</string>
    <string name="help_onB3">With your help we will build a better Mexico.</string>
    <string name="conti">continue</string>
    <string name="social_tittle">Modelo Inversión Social</string>
    <string name="social_body">Through our Social Investment Model we strengthen civil society organizations so that they provide comprehensive care to girls, boys and adolescents, based on a Human Rights Approach and a Management Approach for Development Results.</string>
    <string name="create_acount">You do not have an account?</string>
    <string name="forgot_password">Did you forget your password?</string>
    <string name="noDonations">No donations yet</string>
    <string name="helpOaxaca">Help Oaxaca</string>
    <string name="descriptionText">Description Text</string>
    <string name="projects">Projects</string>
    <string name="register_r">Register</string>
    <string name="register_org">Register an organization?</string>
    <string name="dateOfB">Date of birth:</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="mejorMex">For a better Mexico</string>
    <string name="somos">We are an organization dedicated to helping the youth.</string>
    <string name="rproject">Fill the gaps</string>
    <string name="title_home">Home</string>
    <string name="title_donate">Donate</string>
    <string name="title_profile">Porfile</string>
    <string name="title_contact">Contact</string>
    <string name="phone_one">55 21 22 52 86</string>
    <string name="phone_two">81 44 44 86 43</string>
    <string name="email_one">contacto@dibujando.org.mx</string>
    <string name="email_two">gdi.mty@dibujando.org.mx</string>
    <string name="hello_blank_fragment">Hello blanck fragment</string>
    <string name="title_projects">Project </string>
    <string name="description_text">Description Proyect</string>
    <string name="mexico_state">Estado de México</string>
    <string name="office_Mexico_State">CENTRAL OFFICES - MEXICO STATE</string>
    <string name="office_location">Calzada de la Naranja #138 Fraccionamiento Industrial Alce Blanco Naucalpan, Estado de México C.P. 53370</string>
    <string name="monterrey_state">Monterrey</string>
    <string name="office_Monterrey_State">FILIAL NORTE - MONTERREY</string>
    <string name="office_Monterrey_location">Plaza Avanta Gardens IZA Business Center, Av. José Vasconcelos #755 Piso 3, Colonia del Valle Garza García, Nuevo León C.P. 66227</string>
    <string name="form">Form</string>
    <string name="name_fundation">Fundación Dibujando un Mañana, A.C.</string>
    <string name="home_tittle">Fundación  Dibujando un mañana</string>
    <string name="sign_in_title">Sign in:</string>
    <string name="projectName">Name of the Project</string>
    <string name="verifyCode">Verify Code</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="are_you_an_organization">Are you an organization?  </string>
    <string name="email">Email</string>
    <string name="deductible">Deductible</string>
    <string name="tag">Tag</string>
    <string name="fill_the_blanks">Fill the blanks.</string>
    <string name="deductible_message1">Deductible petition was correctly asked.</string>
    <string name="deductible_message2">In 3 to 5 days, we will contact you.</string>
    <string name="log_out_message_1">Log out</string>
    <string name="log_out_message_2">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="message_sended">Message sended</string>
    <string name="missing_blanks">Missing blanks</string>
    <string name="fill_blanks">Please fill all the blanks</string>
    <string name="close">Close</string>
    <string name="proposed_projects">Proposed Projects</string>
    <string name="proposed_organizations">Proposed Organizations</string>
    <string name="see_more">More</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="project_approved">Approved project</string>
    <string name="unsuccessful_petition">nsuccessful petition, try again.</string>
    <string name="project_rejected">Project rejected</string>
    <string name="organization_approved">Approved organization</string>
    <string name="organization_rejected">Rejected organization</string>
    <string-array name="findOut">
        <item>Social Media(Facebook, Twitter, Instagram or LinkedIn</item>
        <item>Website</item>
        <item>Social media advertisemnt</item>
        <item>Advertisemnt in website</item>
        <item>Serch on websites like Google</item>
        <item>Recomendation from friends</item>
        <item>Gifts with a cause</item>
        
        <item>Rounding in service store or convenience stores</item>
    </string-array>
    <string-array name="interestedIn">
        <item>Join as Company</item>
        <item>Join as Person </item>
        <item>Join as OSC</item>
        <item>Work in Dibujando un Mañana</item>
    </string-array>
</resources>