<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.contact.ContatcFormFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/contact_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:text="@string/join_ask"
            android:textColor="@color/darkGray"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contact_first_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/contact_title_text"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/round_corners"
            android:hint="@string/fist_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="Miguel Angel"
            android:textColor="@color/darkGray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/contact_last_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/contact_first_name_edit_text"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/round_corners"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="Perez"
            android:textColor="@color/darkGray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/contact_email_text_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/contact_last_name_edit_text"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/round_corners"
            android:hint="email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="ocy@hotmail.com"
            android:textColor="@color/darkGray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/contact_phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/contact_email_text_edit"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/round_corners"
            android:hint="@string/phone_home_number"
            android:inputType="phone"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="5544663322"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/contact_find_out_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_phone_edit_text"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:text="@string/question_found_FDUM"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/form_find_out_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_find_out_text"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="32dp"
            android:entries="@array/findOut" />

        <TextView
            android:id="@+id/contact_join_as_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_find_out_spinner"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:text="@string/interested"
            android:textColor="@color/darkGray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/form_joins_as_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_join_as_text"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="32dp"
            android:entries="@array/interestedIn" />


        <EditText
            android:id="@+id/register_project_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_joins_as_spinner"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/round_corners"
            android:gravity="start|top"
            android:hint="@string/hint_message"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingEnd="20dp"
            android:paddingBottom="8dp"
            android:text="@string/hint_message_example"
            android:textColor="@color/darkGray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/register_project_register_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_project_description_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/round_corners_buttons"
            android:backgroundTint="@color/redDUM"
            android:elevation="8dp"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

</ScrollView>