<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    tools:context=".ui.contact.ContactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/contact_title_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            app:cardCornerRadius="30dp">

            <TextView
                android:id="@+id/contact_title_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="12dp"
                android:paddingTop="16dp"
                android:paddingEnd="12dp"
                android:paddingBottom="16dp"
                android:text="@string/contact"
                android:textColor="@color/darkGray"
                android:textSize="32sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/contact_CDMX_title_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_title_cardview"
            android:layout_marginTop="16dp"
            android:elevation="0dp"
            app:cardCornerRadius="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">

                <TextView
                    android:id="@+id/contact_CDMX_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    android:text="@string/mexico_state"
                    android:textColor="@color/redDUM"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contact_address_name_cdmx_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_CDMX_title_text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/office_Mexico_State"
                    android:textColor="@color/darkGray"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/contact_address_edo_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contact_address_name_cdmx_text"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/office_location"
                    android:textColor="@color/darkGray"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/contact_email_one_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_address_edo_text"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_corners"
                    android:backgroundTint="@color/orangeDUM"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="20dp"
                    android:text="@string/email_one"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/contact_phone_one_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_email_one_btn"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_corners"
                    android:backgroundTint="@color/mustardDum"
                    android:drawableStart="@drawable/ic_contact"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="20dp"
                    android:text="@string/phone_one"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/contact_MTY_title_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_CDMX_title_cardview"
            android:layout_marginTop="16dp"
            android:elevation="0dp"
            app:cardCornerRadius="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">

                <TextView
                    android:id="@+id/contact_MTY_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    android:text="@string/monterrey_state"
                    android:textColor="@color/redDUM"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contact_address_name_mty_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_MTY_title_text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/office_Monterrey_State"
                    android:textColor="@color/darkGray"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contact_address_mty_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contact_address_name_mty_text"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/office_Monterrey_location"
                    android:textColor="@color/darkGray"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/contact_email_two_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_address_mty_text"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_corners"
                    android:backgroundTint="@color/grayDum"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="20dp"
                    android:text="@string/email_two"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/contact_phone_two_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contact_email_two_btn"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_corners"
                    android:backgroundTint="@color/teal_200"
                    android:drawableStart="@drawable/ic_contact"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="20dp"
                    android:text="@string/phone_two"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_MTY_title_cardview"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="100dp"
            android:elevation="0dp"
            app:cardCornerRadius="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">

                <TextView
                    android:id="@+id/contact_get_in_touch_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/inTouch_question"
                    android:textColor="@color/darkGray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/contact_form_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_get_in_touch_text"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_corners"
                    android:backgroundTint="@color/redDUM"
                    android:drawableStart="@drawable/ic_form"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:paddingStart="40dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="40dp"
                    android:paddingBottom="20dp"
                    android:text="@string/form"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>