<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.projects.RegisterProjectFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/register_project_register_project_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:text="@string/rproject"
            android:textColor="@color/darkGray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/register_project_project_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/register_project_register_project_text"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/round_corners"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="Proyecto perrón"
            android:textColor="@color/darkGray"
            android:textSize="14sp" />



        <EditText
            android:id="@+id/register_project_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_project_project_name_edit_text"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/round_corners"
            android:gravity="start|top"
            android:hint="@string/hint_description"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingEnd="20dp"
            android:paddingBottom="8dp"
            android:text="Es un proyecto incre que va a ayudar a los niños en Oaxaca. Los niños van a poder estudiar y comer en la escuela."
            android:textColor="@color/darkGray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/register_project_register_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_project_description_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/round_corners_buttons"
            android:backgroundTint="@color/redDUM"
            android:elevation="8dp"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

</ScrollView>